src/Test/Fixtures/Good/Arrays/negativeBitArrayFourDeclaration.lf
let bits : [bit; 4] = - [0, 0, 1, 1];