src/Test/Fixtures/Bad/Arrays/missingMiddleElementInArrayLiteral.lf
let xs : [i32; 3] = [1, , 3];